--- a/css/main.css
+++ b/css/main.css
@@ -2,32 +2,197 @@
 @import url(http://fonts.googleapis.com/earlyaccess/nanumgothic.css);
 /* 공통영역 */
 body {
-	font-family: 'Nanum Gothic', '나눔 고딕', sans-serif;
-	font-size:16px;
-	letter-spacing: -1px;
-	color: #444;
-	word-wrap: break-word;
-	line-height: 1;
+  font-family: "Nanum Gothic", "나눔 고딕", sans-serif;
+  font-size: 16px;
+  letter-spacing: -1px;
+  color: #444;
+  word-wrap: break-word;
+  line-height: 1;
 }
 /* : 가상선택자, :: 가상요소 */
-a:link {color: #444;}
-a:hover {color: #444;}
-a:visited {color: #444;}
-a {text-decoration: none;}
-img {border: none;}
+a:link {
+  color: #444;
+}
+a:hover {
+  color: #444;
+}
+a:visited {
+  color: #444;
+}
+a {
+  text-decoration: none;
+}
+img {
+  border: none;
+}
 /* . 클래스선택자 */
 .clear::after {
-	content: '';
-	clear: both;
-	display: block;
+  content: "";
+  clear: both;
+  display: block;
 }
 .txt_right {
-	text-align: right !important;
+  text-align: right !important;
 }
 .mt20 {
-	margin-top: 20px !important;
+  margin-top: 20px !important;
 }
 .w100p {
-	width: 100% !important;
+  width: 100% !important;
 }
 /* //공통영역 */
+
+/* //상단메뉴영역 */
+.openMOgnb {
+  display: block;
+  position: absolute;
+  left: 15px;
+  top: 35px;
+  width: 25px;
+  height: 16px;
+}
+
+/* 헤더영역 */
+.on {
+  background: #32353d;
+}
+header {
+  height: 90px;
+  text-align: center;
+  z-index: 200;
+  background: rgba(0, 0, 0, 0.5);
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+}
+.box_inner {
+  width: 100%;
+  margin: 0 auto;
+}
+/* 로고영역 */
+.header_area h1 {
+  float: none;
+  width: 100%;
+  height: 50px;
+  text-align: center;
+  padding: 3px 0 0;
+}
+.header_area h1 a {
+  display: inline-block;
+  width: 150px;
+  height: 80px;
+  background: url(../img/main_logo.png) no-repeat;
+  background-size: 150px 40px !important;
+  background-position: center center !important;
+  text-indent: -9999px;
+  overflow: hidden;
+}
+.hdd {
+  text-indent: -9999px; /* 들여쓰기 화면에서는 없어지지만 시각장애인을 위한 스크린리더를 위해 만듦 */
+  position: absolute;
+}
+.openMOgnb span {
+  box-sizing: border-box; /* 박스 크기를 지정하는 조건. 박스 크기에 border을 합함 */
+  display: block;
+  width: 25px;
+  height: 3px;
+  margin-bottom: 4px;
+  border-radius: 10px;
+  background: #fff;
+}
+.openMOgnb span + span {
+  width: 17px;
+} /*두번째꺼 짧게 하기*/
+.openMOgnb span:last-child {
+  width: 25px;
+  margin-bottom: 0px;
+} /*세번째꺼 길게 되돌리기*/
+
+.header_cont {
+  float: none;
+  width: 100%;
+  background-color: #31353d;
+  display: none;
+}
+.closePop {
+  display: block;
+  position: absolute;
+  right: 0;
+  top: 15px;
+}
+.closePop a {
+  display: block;
+  width: 60px;
+  height: 60px;
+  text-indent: -9999px;
+  overflow: hidden; /* 클 때 넘치지 않게 */
+  background: url(../img/btn_closeMenu.png) no-repeat;
+  background-size: 60px;
+}
+.util {
+  padding: 20px;
+}
+.header_cont a {
+  color: white;
+}
+.util li {
+  float: left;
+}
+
+.util li::after {
+  /* 가상 요소*/
+  content: "|";
+  display: inline-block;
+  padding: 0 10px;
+  color: #a2a2a3;
+  font-size: 10px;
+  position: relative;
+  top: -2px;
+}
+.util li:last-child::after {
+  content: "";
+  display: none;
+}
+.gnb {
+  float: none;
+  box-sizing: border-box;
+  padding-top: 0px;
+  height: auto;
+  border-top: 1px solid #83868b;
+}
+.gnb li {
+  float: left;
+  width: 50%;
+  text-align: left;
+  box-sizing: border-box;
+  border-bottom: solid 1px #83868b;
+}
+.gnb li a {
+  display: block;
+  padding: 0 0 0 65px;
+  height: 60px;
+  line-height: 60px;
+  background: url(../img/ico_gnb01.png) no-repeat 10px center;
+  background-size: 49px 56px;
+}
+/* 상단 메뉴 숨겨지는 영역 */
+.gnb_depth {
+  display: none;
+}
+
+.gnb li + li a {
+  background-image: url(../img/ico_gnb02.png);
+}
+.gnb li + li + li a {
+  background-image: url(../img/ico_gnb03.png);
+}
+.gnb li + li + li + li a {
+  background-image: url(../img/ico_gnb04.png);
+}
+.gnb li:nth-child(2n + 1) {
+  /*홀수번째 li에*/
+  border-right: solid 1px #84868b;
+}
+/* //헤더영역 */
+/* //모바일 영역 */
