--- a/css/main.css
+++ b/css/main.css
@@ -309,4 +309,97 @@ header {
 /* //본문 컨테이너 영역 */
 
 /* //헤더영역 */
+
+/* //모바일영역 */
+
+.to_top .s_point {
+  background: url(./img/ico_totop_mo.png) no-repeat;
+  background-size: 45px 45px;
+  display: inline;
+  float: right;
+  width: 45px;
+  height: 45px;
+  text-indent: -9999px;
+}
+
+/* 푸터영역 */
+footer {
+  border-top: 1px solid #ddd;
+}
+.foot_area {
+  box-sizing: border-box;
+  padding: 0 20px 90px;
+  position: relative;
+}
+.foot_list {
+  padding-top: 25px;
+}
+.foot_list li {
+  float: left;
+}
+.foot_list li:first-child::after {
+  content: "|";
+  display: inline-block;
+  padding: 0 10px;
+  font-size: 10px;
+  position: relative;
+  top: -2px;
+}
+.foot_list li a {
+  font-weight: bold;
+  font-size: 15px;
+}
+
+.foot_area h2 {
+  color: #666;
+  padding-top: 15px;
+  font-size: 14px;
+}
+.addr {
+  line-height: 1.3;
+  font-size: 14px;
+  color: #767676;
+  padding-top: 5px;
+}
+.br_line {
+  display: block;
+}
+.gubun {
+  display: none;
+}
+.copy {
+  padding: 3px 0 20px;
+  font-size: 14px;
+  color: #767676;
+}
+
+.snslink {
+  position: static; /*고정형*/
+  width: 210px;
+  margin: 10px auto; /*auto-가운데정렬*/
+}
+
+.snslink li:first-child {
+  margin-left: 0px;
+}
+.snslink li {
+  margin-left: 30px;
+  float: left;
+}
+.snslink li a {
+  display: block;
+  width: 50px;
+  height: 74px;
+  text-indent: -9999px;
+  overflow: hidden;
+  background: url(../img/ico_blog_r.png) no-repeat;
+}
+.snslink li + li a {
+  background-image: url(../img/ico_facebook_r.png);
+}
+.snslink li + li + li a {
+  background-image: url(../img/ico_instargram_r.png);
+}
+/* //푸터영역 */
+
 /* //모바일 영역 */
