--- a/css/tablet.css
+++ b/css/tablet.css
@@ -176,5 +176,97 @@
   }
   /* //슬라이드영역 */
 
+  /* 겔러리 최근 게시물 */
+
+  .about_area h2 {
+    padding: 55px 0 105px;
+    font-size: 40px;
+  }
+  .about_area h2 b {
+    display: initial;
+    padding-top: initial;
+  }
+
+  .place_list {
+    box-sizing: border-box;
+    padding: 0 20px;
+  }
+  .place_list li:first-child {
+    margin-left: 0;
+  }
+  .place_list li {
+    width: 32%;
+    float: left;
+    margin-left: 2%;
+    position: relative;
+    top: -50px;
+    padding: initial;
+  }
+  .place_list li p.txt {
+    padding: 10px 31px 0;
+    line-height: 1.8;
+  }
+  .place_list li .view {
+    margin-top: 20px;
+  }
+  /* //겔러리 최근 게시물 */
+
+  /* 전화상담과 최근공지사항 */
+  .appbbs_area {
+    padding: 60px 0;
+  }
+  .appbbs_box {
+    box-sizing: border-box;
+    padding: 0 20px;
+  }
+  .app_line {
+    display: initial;
+    float: left;
+    width: 66%;
+    box-sizing: border-box;
+    padding: 46px 0;
+    background: url(../img/bg_app.jpg) no-repeat;
+    font-size: 0;
+    text-align: center;
+  }
+  .app_line a {
+    font-size: 21px;
+    display: inline-block; /*새로배치를 가로배치로 바꿀 때 쓴다*/
+    width: 42.4%;
+    height: 100px;
+    line-height: 100px;
+    box-sizing: border-box;
+    padding-left: 55px;
+    text-align: left;
+    background: rgba(0, 0, 0, 0.3) url(../img/ico_katalk.png) no-repeat 10px 50%;
+    border: white 2px solid;
+    color: white;
+    vertical-align: middle;
+    margin-right: 10px;
+  }
+  .app_line a + a {
+    margin-right: 0px;
+    padding-left: 65px;
+    background-image: url(../img/ico_phone.png);
+  }
+  .bbs_line {
+    float: right;
+    width: 30%;
+    border-top: none;
+    padding: initial;
+  }
+  .bbs_line h3 {
+    font-size: 26px;
+    font-weight: initial;
+  }
+  .bbs_line .notice_recent li a {
+    display: block;
+    padding-left: 14px;
+    background: url(../img/ico_bullet.png) no-repeat 0 50%;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+  }
+  /* //전화상담과 최근공지사항 */
   /* //태블릿영역 */
 }
