--- a/css/tablet.css
+++ b/css/tablet.css
@@ -267,6 +267,38 @@
     text-overflow: ellipsis;
     white-space: nowrap;
   }
+
+  /* 푸터영역 */
+  footer {
+    padding: initial;
+  }
+  .font-area {
+    padding-left: 20px;
+    padding-bottom: 0px;
+  }
+  .addr {
+    font-size: 13px;
+    line-height: 1.4;
+  }
+  .br_line {
+    display: initial;
+  }
+  .snslink {
+    position: absolute;
+    right: 20px;
+    top: 20px;
+    width: initial;
+    margin: initial;
+  }
+  .snsl link {
+    margin-left: 15px;
+  }
+  .quick_list {
+    display: none;
+  }
+
+  /* //푸터영역 */
+
   /* //전화상담과 최근공지사항 */
   /* //태블릿영역 */
 }
