20201103 fin - board_view

--- a/css/board.css
+++ b/css/board.css
@@ -307,3 +307,90 @@ input::placeholder {
 }
 
 /* //게시판 글쓰기 폼 */
+
+/* 게시판 글 보기 영역 */
+.bbsview_list {
+  padding-bottom: 30px;
+  border-top: 2px solid #384d75;
+  text-align: left;
+}
+.bbsview_list li {
+  box-sizing: border-box;
+  padding: 0 15px;
+  border-bottom: 1px solid #ccc;
+  color: #666;
+  font-size: 14px;
+  line-height: 20px;
+}
+.bbsview_list .bbsview_list {
+  width: 100%;
+  white-space: pre-wrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  height: 50px;
+  line-height: 50px;
+  font-weight: bold;
+  font-size: 16px;
+}
+.bbsview_list .bbs_hit {
+  overflow: hidden;
+  height: 40px;
+  line-height: 40px;
+  float: left;
+  width: 50%;
+}
+.bbsview_list .bbs_date {
+  overflow: hidden;
+  height: 40px;
+  line-height: 40px;
+  width: 50%;
+}
+.bbs_content {
+  clear: both;
+  min-height: 200px;
+  padding: 20px 15px !important;
+}
+.btn_bbs {
+  margin-bottom: 5px;
+  display: inline-block;
+  width: 100%;
+  height: 35px;
+  font-size: 14px;
+  line-height: 35px;
+  background-color: #384d75;
+  color: white !important;
+  text-align: center;
+}
+.near_list {
+  display: none;
+}
+@media all and (min-width: 801px) {
+  /* 태블릿+pc */
+  .near_list {
+    display: block;
+    border-top: 1px solid #ccc;
+  }
+  .btn_bbs {
+    width: 70px;
+    float: none;
+    text-align: center;
+  }
+  .near_list li {
+    padding: 10px;
+    border-bottom: 1px solid #ccc;
+    text-align: left;
+  }
+
+  .near_list li h4 {
+    float: left;
+    width: 100px;
+    padding: 0 0 0 50px;
+    background: url(../img/ico_nearNext.png) no-repeat 12px 50%;
+    font-size: 15px;
+  }
+  .near_list li + li h4 {
+    background: url(../img/ico_nearPrev.png) no-repeat 12px 50%;
+  }
+  /* //태블릿+pc */
+}
+/* //게시판 글 보기 영역 */
