--- a/css/tablet.css
+++ b/css/tablet.css
@@ -1,8 +1,8 @@
 @charset "UTF-8";
-@import url(http://fonts.googleapis.com/earlyaccess/nanumgothic.css);
-
-/* 모든 종류의 미디어를 스타일 지정 최소 화면이 801px이상부터 적용 */
 @media all and (min-width: 801px) {
+  /* 태블릿영역 */
+
+  /* 상단로고와 메뉴스타일 */
   header {
     height: 113px;
   }
@@ -10,15 +10,15 @@
     float: left;
     padding: 25px 0 0;
     padding-left: 20px;
-    width: initial; /* 모바일버전에서 지정해놓은 속성을 초기화 */
-    height: initial;
-    text-align: initial;
+    width: auto;
+    height: inherit;
+    text-align: inherit;
   }
   .header_area h1 a {
     display: block;
     width: 270px;
     height: 71px;
-    background-size: initial !important;
+    background-size: inherit !important;
   }
   .openMOgnb {
     display: none;
@@ -33,10 +33,8 @@
   .closePop {
     display: none;
   }
-  /* //상단로고와 메뉴스타일 */
-
   .util {
-    padding: 0px;
+    padding: 0;
     text-align: right;
     padding-top: 10px;
   }
@@ -45,7 +43,7 @@
     display: inline;
   }
   .util li::after {
-    color: white;
+    color: #fff;
   }
   .util li a {
     font-size: 14px;
@@ -53,12 +51,13 @@
   .gnb {
     float: right;
     padding-top: 5px;
-    height: initial;
+    height: inherit;
     border-top: none;
   }
   .gnb li {
-    width: initial;
-    text-align: initial;
+    width: auto;
+    text-align: inherit;
+    box-sizing: inherit;
     border-bottom: none;
   }
   .gnb li:nth-child(2n + 1) {
@@ -68,6 +67,7 @@
     padding: 26px 25px;
     font-size: 18px;
     height: inherit;
+    line-height: inherit;
     background: none;
   }
   .gnb li + li a {
@@ -82,14 +82,14 @@
   .gnb li:last-child a {
     padding-right: 0px;
   }
-  /* 컨테이너영역 */
+  /* //상단로고와 메뉴스타일 */
 
+  /* 컨테이너영역 */
   #container {
     padding-bottom: 20px;
-    width: initial;
-    position: initial;
+    width: auto;
+    position: inherit;
   }
-
   /* //컨테이너영역 */
   /* 슬라이드영역 */
   .main_rolling_mobile {
@@ -113,32 +113,29 @@
     background-size: cover;
     width: 100%;
   }
-
   .roll_content a img {
     display: none;
-    width: 100%;
-  } /* 밑쪽 스크롤 바 없애기 */
-
+  }
   li.imglist0 {
     position: relative;
     z-index: 50;
     background: url(../img/maple.jpg) no-repeat;
   }
-  .imglist1 {
+  li.imglist1 {
     position: absolute;
     z-index: 10;
     left: 0;
     top: 0;
     background: url(../img/img_slidecontents02.png) no-repeat;
   }
-  .imglist2 {
+  li.imglist2 {
     position: absolute;
+    z-index: 10;
     left: 0;
     top: 0;
-    z-index: 50;
     background: url(../img/img_slidecontents03.png) no-repeat;
   }
-  .rolll_content {
+  .roll_content {
     position: relative;
   }
   .roll_content .roll_txtline {
@@ -146,10 +143,10 @@
     left: 0;
     bottom: 60px;
     width: 100%;
-    text-align: center;
     line-height: 1;
-    font-size: 20px;
-    color: white;
+    text-align: center;
+    font-size: 22px;
+    color: #fff;
     letter-spacing: 2px;
   }
   .rollbtnArea {
@@ -168,7 +165,7 @@
     margin-left: 10px;
   }
   .rollingbtn li {
-    display: inline;
+    display: inline-block;
     margin-left: 5px;
   }
   .rollingbtn li a {
@@ -176,17 +173,15 @@
   }
   /* //슬라이드영역 */
 
-  /* 겔러리 최근 게시물 */
-
+  /* 겔러리 최근게시물 */
   .about_area h2 {
     padding: 55px 0 105px;
     font-size: 40px;
   }
   .about_area h2 b {
-    display: initial;
-    padding-top: initial;
+    display: inherit;
+    padding-top: inherit;
   }
-
   .place_list {
     box-sizing: border-box;
     padding: 0 20px;
@@ -195,22 +190,21 @@
     margin-left: 0;
   }
   .place_list li {
-    width: 32%;
     float: left;
+    width: 32%;
     margin-left: 2%;
     position: relative;
     top: -50px;
-    padding: initial;
+    padding: 0;
   }
   .place_list li p.txt {
-    padding: 10px 31px 0;
+    padding: 10px 30px 0;
     line-height: 1.8;
   }
   .place_list li .view {
     margin-top: 20px;
   }
-  /* //겔러리 최근 게시물 */
-
+  /* //겔러리 최근게시물 */
   /* 전화상담과 최근공지사항 */
   .appbbs_area {
     padding: 60px 0;
@@ -220,18 +214,18 @@
     padding: 0 20px;
   }
   .app_line {
-    display: initial;
+    display: inherit;
     float: left;
-    width: 66%;
+    width: 65%;
     box-sizing: border-box;
     padding: 46px 0;
-    background: url(../img/bg_app.jpg) no-repeat;
+    background: url(../img/bg_app.jpg);
     font-size: 0;
     text-align: center;
   }
   .app_line a {
     font-size: 21px;
-    display: inline-block; /*새로배치를 가로배치로 바꿀 때 쓴다*/
+    display: inline-block;
     width: 42.4%;
     height: 100px;
     line-height: 100px;
@@ -239,25 +233,25 @@
     padding-left: 55px;
     text-align: left;
     background: rgba(0, 0, 0, 0.3) url(../img/ico_katalk.png) no-repeat 10px 50%;
-    border: white 2px solid;
-    color: white;
+    border: 2px solid #fff;
+    color: #fff;
     vertical-align: middle;
     margin-right: 10px;
   }
   .app_line a + a {
-    margin-right: 0px;
+    margin-right: 0;
     padding-left: 65px;
     background-image: url(../img/ico_phone.png);
   }
   .bbs_line {
     float: right;
-    width: 30%;
+    width: 29%;
     border-top: none;
-    padding: initial;
+    padding: inherit;
   }
   .bbs_line h3 {
     font-size: 26px;
-    font-weight: initial;
+    font-weight: inherit;
   }
   .bbs_line .notice_recent li a {
     display: block;
@@ -267,12 +261,12 @@
     text-overflow: ellipsis;
     white-space: nowrap;
   }
-
+  /* //전화상담과 최근공지사항 */
   /* 푸터영역 */
   footer {
-    padding: initial;
+    padding: inherit;
   }
-  .font-area {
+  .foot_area {
     padding-left: 20px;
     padding-bottom: 0px;
   }
@@ -281,24 +275,22 @@
     line-height: 1.4;
   }
   .br_line {
-    display: initial;
+    display: inherit;
   }
   .snslink {
     position: absolute;
     right: 20px;
     top: 20px;
-    width: initial;
-    margin: initial;
+    width: auto;
+    margin: inherit;
   }
-  .snsl link {
+  .snslink li {
     margin-left: 15px;
   }
   .quick_list {
     display: none;
   }
-
   /* //푸터영역 */
 
-  /* //전화상담과 최근공지사항 */
   /* //태블릿영역 */
 }
