--- a/css/tablet.css
+++ b/css/tablet.css
@@ -8,17 +8,18 @@
   }
   .header_area h1 {
     float: left;
-    padding: 25px 0 0;
+    padding: 15px 0 0;
     padding-left: 20px;
     width: auto;
     height: inherit;
     text-align: inherit;
+    margin-left: 20px;
   }
   .header_area h1 a {
     display: block;
-    width: 270px;
-    height: 71px;
-    background-size: inherit !important;
+    width: 100px;
+    height: 80px;
+    background-size: 120px 100px !important;
   }
   .openMOgnb {
     display: none;
@@ -119,21 +120,21 @@
   li.imglist0 {
     position: relative;
     z-index: 50;
-    background: url(../img/maple.jpg) no-repeat;
+    background: url(../img/slide_01.png) no-repeat;
   }
   li.imglist1 {
     position: absolute;
     z-index: 10;
     left: 0;
     top: 0;
-    background: url(../img/img_slidecontents02.png) no-repeat;
+    background: url(../img/slide_02.png) no-repeat;
   }
   li.imglist2 {
     position: absolute;
     z-index: 10;
     left: 0;
     top: 0;
-    background: url(../img/img_slidecontents03.png) no-repeat;
+    background: url(../img/slide_03.png) no-repeat;
   }
   .roll_content {
     position: relative;
