유효성 jquery 라이브러리 사용

--- a/css/board.css
+++ b/css/board.css
@@ -229,7 +229,7 @@ input::placeholder {
 }
 .app_list {
   padding: 10px 0;
-  border-bottom: 1px solid #ccc;
+  /* border-bottom: 1px solid #ccc; */
 }
 .app_list li {
   position: relative;
