--- a/css/join.css
+++ b/css/join.css
@@ -35,11 +35,11 @@ label {
 .css-checkbox {
   overflow: hidden;
   position: absolute;
-  left: -1000px;
+  left: -9999px;
   width: 1px;
   height: 1px;
 }
-.css-checkbox + label {
+.agree {
   display: inline-block;
   height: 20px;
   padding-left: 30px !important;
@@ -51,5 +51,8 @@ label {
   -moz-user-select: none;
 }
 .css-checkbox:checked + label {
+  background-position: 0 -20px;
+}
+.css-checkbox:checked + label + label {
   background-position: 0 -20px;
 }
